objects/pw_cc__State__c.object
<CustomObject>
    <description>A list of standard States/Counties/Provinces used by CountryComplete for both auto-completion at the UI level and also for validation and standardization and the database level.  All States have a parent Country object</description>
    <fields>
        <fullName>pw_cc__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>Province</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__Country__c</fullName>
        <label>Country</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pw_cc__FullIsoCode__c</fullName>
        <formula>pw_cc__Country__r.pw_cc__IsoCode_2__c + &apos;-&apos; + pw_cc__IsoCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsObsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsoCode__c</fullName>
        <label>ISO Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pw_cc__RegionalDivision__c</fullName>
        <label>Regional Division</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__Regional_Sales_Manager__c</fullName>
        <label>Regional Sales Manager</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__TimeZone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The principle time zone of this province / state / county / sub-country where data is available</inlineHelpText>
        <label>Time Zone</label>
        <referenceTo>pw_cc__TimeZone__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__TrimmedName__c</fullName>
        <description>Takes the first 80 characters of the state name which ensures the right length for inserting into standard state fields.</description>
        <formula>TRIM ( LEFT (Name, 80) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trimmed Name</label>
        <type>Text</type>
    </fields>
    <label>State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>